# csp_lib

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  NOTICE  README.md  build_wheel.py  project.md  pyproject.toml  setup.py
.claude/: settings.local.json
.claude/agents/: architect.md  doc-organizer.md  feature-driver.md  implementer.md  performance-optimizer.md  security-reviewer.md  test-planner.md
.claude/teams/: audit-demo-team.md  feature-team.md  hierarchical-control-team.md  release-team.md  review-team.md
.github/workflows/: build-wheels.yml
csp_lib/: __init__.py
csp_lib/can/: __init__.py  config.py  exceptions.py
csp_lib/cluster/: context.py
csp_lib/controller/: __init__.py  discovery.py
csp_lib/core/: __init__.py  lifecycle.py  resilience.py
csp_lib/equipment/: __init__.py
csp_lib/grpc/: __init__.py  control.proto
csp_lib/integration/: __init__.py  command_router.py  context_builder.py  data_feed.py  distributor.py  registry.py  schema.py  system_controller.py
csp_lib/manager/: __init__.py  base.py  unified.py
csp_lib/modbus/: codec.py
csp_lib/modbus_server/: config.py  register_block.py
csp_lib/mongo/: __init__.py  (+5 more)
docs/: Home.md
examples/: 01_basic_device.py  02_device_template.py  03_control_strategies.py  05_system_controller.py  06_custom_strategy.py  07_manager_unified.py  08_alarm_notification.py  09_advanced_strategies.py  10_distributed_control.py  11_cascading_strategy.py  12_cluster_controller.py  13_can_device.py  14_power_distributor.py  demo_full_system.py
tests/: conftest.py  test_frozen_configs.py
(+217 files in other folders)
