[project]
name = "csp_lib"
version = "0.1.0"
description = "CSP Common Library - 模組化工具集"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.0",
]

[project.optional-dependencies]
mongo = [
    "motor>=3.0.0",
]
redis = [
    "redis>=5.0.0",
]
modbus = [
    "pymodbus>=3.0.0",
]
all = [
    "csp_lib[mongo,redis,modbus]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
